// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> create basic alert 1`] = `
<div>
  <div
    className="fd-alert fd-alert--dismissible"
    role="alert"
  >
    <button
      aria-controls="j2ALl423"
      aria-label="Close"
      className="fd-alert__close"
      onClick={[Function]}
    />
    <div
      className="fd-alert__text"
    >
      Default alert with a
      <a
        className="fd-link"
        href="#"
      >
        link
         
      </a>
    </div>
  </div>
</div>
`;

exports[`<Alert /> create basic alert 2`] = `
<div>
  <div
    className="fd-alert fd-alert--dismissible fd-alert--error"
    role="alert"
  >
    <button
      aria-controls="j2ALl423"
      aria-label="Close"
      className="fd-alert__close"
      onClick={[Function]}
    />
    <div
      className="fd-alert__text"
    >
      <span
        className="sap-icon--mesage-error"
      />
      Error message with a
    </div>
  </div>
</div>
`;

exports[`<Alert /> create non-dismissible alert 1`] = `
<div>
  <div
    className="fd-alert blue"
    role="alert"
  >
    <div
      className="fd-alert__text"
    >
      Default alert that cannot be dismissed
      <a
        className="fd-link"
        href="#"
      >
        link
         
      </a>
    </div>
  </div>
</div>
`;
